# speech-router

./: .gitignore  Cargo.toml  Dockerfile  build.sh  test.sh
.context/compound-engineering/ce-review/2026-06-02-phase1/: summary.md
.context/compound-engineering/ce-review/2026-06-02-unit3-failover/: report.md
.githooks/: pre-commit  pre-push
.github/workflows/: release.yml
docs/brainstorms/: 2026-06-02-speech-ui-replacement-requirements.md
docs/plans/: 2026-06-02-001-feat-stt-offload-strix-halo-plan.md  2026-06-02-002-feat-openwebui-speech-ui-plan.md  2026-06-02-003-feat-cuda-node-stt-failover-plan.md  2026-06-02-004-feat-state-aware-stt-routing-plan.md
docs/runbooks/: open-webui-speech-config.md
src/: asr.rs  config.rs  ffmpeg.rs  lib.rs  main.rs  metrics.rs  node_state.rs  proxy.rs  test_util.rs  wyoming.rs
