[package]
name = "speech-router"
version = "0.2.3"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
bytes = "1"
ffmpeg-next = "7"
futures-util = "0.3"
isolang = "2"
prometheus-client = "0.23"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
